--- a/layout/style.css
+++ b/layout/style.css
@@ -39,7 +39,7 @@ body {
   font-family: Roboto, sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(#04bde4, #0355ba);
+  background: transparent;
 }
 
 .container {
