--- a/layout/index.html
+++ b/layout/index.html
@@ -214,7 +214,7 @@
 
     <div class="container">
       <div class="foot">
-        <button onclick="generatePDF()">Generate PDF</button>
+        <button id="generatePdfButton">Generate PDF</button>
 
         <div class="sk-circle" id="loader">
           <div class="sk-circle-dot"></div>
@@ -243,7 +243,7 @@
         /></a>
       </div>
     </div>
-    <script src="layout_1.72.js"></script>
-    <script src="preset.js"></script>
+    <script src="layout-pdf.js"></script>
+    <script src="layout-ui.js"></script>
   </body>
 </html>
