background worker working

--- a/layout/index.html
+++ b/layout/index.html
@@ -254,7 +254,7 @@
         /></a>
       </div>
     </div>
-    <script src="layout-pdf.js"></script>
+    <script src="layout-master.js"></script>
     <script src="layout-ui.js"></script>
   </body>
 </html>
