--- a/layout/index.html
+++ b/layout/index.html
@@ -286,6 +286,10 @@
                 <div class="box settings">
                     <label for="foldable_outerBorder">Outer</label>
                     <input type="number" id="foldable_outerBorder" value="0" />
+                    <label for="foldable_innerBorderWidth">Inner Width</label>
+                    <input type="number" id="foldable_innerBorderWidth" value="0" />
+                    <label for="foldable_innerBorderHeight">Inner Height</label>
+                    <input type="number" id="foldable_innerBorderHeight" value="0" />
                     <label for="foldable_borderColorFront">Front Color</label>
                     <input type="color" id="foldable_borderColorFront" value="#000000" />
                     <label for="foldable_borderColorBack">Back Color</label>
