--- a/layout/index.html
+++ b/layout/index.html
@@ -334,6 +334,16 @@
               <option value="vertical">Vertical</option>
               <option value="horizontal">Horizontal</option>
             </select>
+            <label for="foldable_cornerRadius">Corner Radius</label>
+            <select id="foldable_cornerRadius">
+              <option value="0">None</option>
+              <option value="3">S (3mm)</option>
+              <option value="5">M (5mm)</option>
+              <option value="8">L (8mm)</option>
+              <option value="10">XL (10mm)</option>
+            </select>
+            <label for="foldable_cutterOffset">Cutter Offset</label>
+            <input type="number" id="foldable_cutterOffset" value="0" />
           </div>
         </div>
       </div>
