--- a/layout/index.html
+++ b/layout/index.html
@@ -10,8 +10,7 @@
 
     <link rel="icon" href="assets/favicon.png" type="image/png" />
     <link rel="stylesheet" href="style.css" />
-    <!-- loader -->
-    <link rel="stylesheet" href="spinkit.css" />
+
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -25,13 +24,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <a href="https://www.pnpbuddy.com">
-          <i class="fa-solid fa-house icon link"></i
-        ></a>
         <h1>Card layout tool v2.0</h1>
-        <a href="./instructions/index.html">
-          <i class="fa-regular fa-circle-question icon link"></i
-        ></a>
       </div>
 
       <!-- drop zone -->
@@ -352,20 +345,17 @@
     <div class="container">
       <div class="foot">
         <button id="generatePdfButton">Generate PDF</button>
-
-        <div class="sk-circle" id="loader">
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
-          <div class="sk-circle-dot"></div>
+        <div
+          id="progressContainer"
+          style="display: none; text-align: center; margin-top: 10px"
+        >
+          <span id="progressStatus"></span>
+          <progress
+            id="progressBar"
+            value="0"
+            max="100"
+            style="width: 100%"
+          ></progress>
         </div>
 
         <a
